@@ -1,6 +1,7 @@
 #ifndef CRC32__H__
 #define CRC32__H__
 
+#include <crc/gcrc.h>
 #include <uint32.h>
 
 #define CRC32POLY    ((uint32)0x04C11DB7UL)
@@ -9,7 +10,7 @@
 #define CRC32POST    ((uint32)0xFFFFFFFFUL)
 
 extern const uint32 crc32_table[256];
-extern uint32 crc32_update(uint32 crc, const char* data, long len);
+#define crc32_update(C,D,L) gcrc32rfl((C),(D),(L),crc32_table)
 #define crc32_block(B,L) (crc32_update(CRC32INIT,(B),(L))^CRC32POST)
 
 #endif
