@@ -1,7 +1,7 @@
 #ifndef CRC64__H__
 #define CRC64__H__
 
-#include <uint64.h>
+#include <crc/gcrc.h>
 
 /* Polynomial: x^64 + x^62 + x^57 + x^55 + x^54 + x^53 + x^52 + x^47 +
  * x^46 + x^45 + x^40 + x^39 + x^38 + x^37 + x^35 + x^33 + x^32 + x^31 +
@@ -14,7 +14,7 @@
 #define CRC64POST    ((uint64)0xffffffffffffffffULL)
 
 extern const uint64 crc64_table[256];
-extern uint64 crc64_update(uint64 crc, const char* bytes, long len);
+#define crc64_update(C,B,L) gcrc64fwd((C),(B),(L),crc64_table)
 #define crc64_block(B,L) (crc64_update(CRC64INIT,(B),(L))^CRC64POST)
 
 #endif
