@@ -18,6 +18,9 @@ Changes in version 1.015
 
 - Added resolve_ipv4name_n, to resolve a name to more than one IP.
 
+- Rewrote the CRC routines in terms of "generic" forward and reflected
+  functions.
+
 NOTE: The next non-bugfix version of bglibs will be rewritten to use the
 new formatting routines in the appropriate iobuf and str functions.
 This will require linking against additional libraries in the future.
